# color-brain-frontend

./: .gitignore  AGENTS.md  CODING_RULES.md  Cargo.toml  Dioxus.toml  FRONTEND_AGENT_PROMPT.md  IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: deploy-landing.yml  deploy.yml
app/: Cargo.toml  Dioxus.toml  README.md
app/assets/styling/: color_brain.css
app/src/: api.rs
app/src/components/: color.rs  comparison_panel.rs  evidence_panel.rs  mod.rs  recipe_table.rs  result_panel.rs  status_indicator.rs  target_form.rs  track_record.rs
app/src/views/: home.rs
assets/: tailwind.css
assets/styling/: color_brain.css
landing/: Cargo.toml  Dioxus.toml  LANDING_PAGE_PLAN.md  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
landing/assets/script/: reveal.js
landing/assets/styling/: landing.css
landing/src/: case_studies.rs  lab_color.rs  main.rs
landing/src/components/: CaseStudies.astro  Contact.astro  Footer.astro  Hero.astro  HowItWorks.astro  Loader.astro  Nav.astro  Problem.astro  Proof.astro  StageLayer.astro  WhoItsFor.astro  case_studies_section.rs  contact_form.rs  footer.rs  hero.rs  how_it_works.rs  mod.rs  nav.rs  problem.rs  proof.rs  who_its_for.rs
landing/src/data/: caseStudies.ts  palette.ts
landing/src/lib/: caseBrowser.ts  lab.ts  motion.ts
landing/src/lib/brain/: data.ts  index.ts  scene.ts
landing/src/pages/: index.astro
landing/src/styles/: global.css
src/: api.rs  main.rs
src/components/: history_picker.rs  mod.rs  result_panel.rs  status_indicator.rs  target_form.rs
src/views/: home.rs  mod.rs
