[package]
name = "color-brain-frontend"
version = "0.1.0"
authors = ["ksmit323 <ksmit323@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
# gloo-net issues requests via the browser fetch API, so it accepts same-origin relative paths
# (resolved against the document origin and forwarded to the backend by the dx dev proxy) — which
# reqwest cannot do on wasm (it rejects relative URLs at parse time). `http` + `json` only.
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }
serde = { version = "1", features = ["derive"] }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
